miniextendr-macros/tests/ui/derive_altrep_real_rejects_subset.rs
//! Test: ALTREP real rejects subset option.

use miniextendr_macros::AltrepReal;

#[derive(AltrepReal)]
#[altrep(subset)]
struct MyData {
    len: usize,
}

fn main() {}
